
28/03/2020 
 - Beginning of the project
 - Init Licence