@@ -1,3 +1,5 @@
+05/04/2020
+- KeyMatch Authorization for not authenticated users with Cabin
 
 28/03/2020 
  - Beginning of the project
